spanish penington intake

--- a/escritos-volumen-1/updated/01-prefacio.adoc
+++ b/escritos-volumen-1/updated/01-prefacio.adoc
@@ -91,11 +91,14 @@ también se esconden de la luz que él conocía y amaba tanto.
 
 Como con todas nuestras publicaciones,
 se pueden obtener copias gratuitas de este libro a través de Market
-Street Fellowship visitando www.marketstreetfellowship.com.
+Street Fellowship visitando _www.marketstreetfellowship.com_.
 La editorial requiere que también haga copias disponibles
 para la venta en línea a través de Amazon,
 pero todos los ingresos de las ventas van a la distribución
 gratuita de esta y otras publicaciones.
 
+[.signed-section-signature]
 Jason R. Henderson
+
+[.signed-section-context-close]
 Septiembre, 2014
