--- a/escritos-volumen-1/updated/07-capitulo-6.adoc
+++ b/escritos-volumen-1/updated/07-capitulo-6.adoc
@@ -1,4 +1,4 @@
-== Capítulo VI. Babilonia la Grande La Ciudad de Confusión Donde el Anticristo Reina
+== Capítulo VI. Babilonia la Grande / La Ciudad de Confusión Donde el Anticristo Reina
 
 BABILONIA:
 La ciudad edificada y colmada de imágenes y semejanzas
@@ -125,7 +125,8 @@ En Babilonia los hombres sólo están soñando en estas cosas y toda
 la satisfacción que tienen proviene del placer de su sueño,
 pero cuando se despierten encontrarán flaqueza, pobreza y desnudez sobre sus almas.
 
-=== Una Descripción de Babilonia Por el Bien de las Hijas de Sión Quienes Actualmente Habitan en Medio de Ella.
+[.old-style]
+=== Una Descripción de Babilonia / Por el Bien de las Hijas de Sión / Quienes Actualmente Habitan en Medio de Ella.
 
 BABILONIA es el sistema espiritual de la iniquidad,
 la mística gran ciudad del gran rey de las tinieblas.
@@ -205,8 +206,8 @@ su edificio no está completamente derribado,
 Mientras quede algo en lo que pueda morar,
 lo reconocerá como suyo y lo mantendrá apresado.
 Es su derecho y no lo perderá. Todo pecado, toda oscuridad es propiamente suya;
-es su trono y él tiene su gobierno allí. El hombre
-es el terreno donde estos dos reyes pelean;
+es su trono y él tiene su gobierno allí. __El hombre
+es el terreno donde estos dos reyes pelean;__
 aquello que es bueno y santo le pertenece a un rey,
 lo malo e impuro le pertenece al otro.
 No hay comunión ni paz entre ellos,
@@ -293,7 +294,8 @@ Ahora bien, hay varios pecados por los que el Espíritu del Señor ha culpado a 
 y por los que ajustará cuentas con ella y con todos los que toman parte de ella.
 Algunos de los cuales mencionaré:
 
-1+++.+++ Sus profundas fornicaciones para con la vida bajo el pretexto de honrarla y adorarla.
+1+++.+++ __Sus profundas fornicaciones para con la vida
+bajo el pretexto de honrarla y adorarla.__
 Ella habla palabras justas, llama a que se establezca la adoración de Dios,
 un ministerio piadoso y las ordenanzas de Dios en la nación,
 pero esto no es lo verdadero ante la vista de Dios.
@@ -305,8 +307,8 @@ Es el lobo vestido de oveja,
 quien mediante una apariencia justa con lana de oveja sobre su espalda,
 esconde su naturaleza voraz de los ojos de los observadores.
 
-2+++.+++ Inventar cosas que el Señor nunca mandó o añadirle a aquello que el
-Señor sí mandó. La mente del hombre está muy ocupada y llena de inventos.
+2+++.+++ __Inventar cosas que el Señor nunca mandó o añadirle a aquello que el
+Señor sí mandó.__ La mente del hombre está muy ocupada y llena de inventos.
 Cuando el corazón es tocado con devoción y celo hacia Dios,
 la parte que inventa se ejercita excesivamente a sí misma con una de dos maneras:
 Imaginando y formando algo que cree que es aceptable para Dios,
@@ -316,7 +318,7 @@ al estar llena de ceremonias de su propia invención
 y adiciones a las cosas mencionadas en las Escrituras;
 aunque los protestantes comunes también han sido culpables de esto.
 
-3+++.+++ Imitar lo que le fue mandado a otros.
+3+++.+++ __Imitar lo que le fue mandado a otros.__
 Es decir,
 cuando un hombre encuentra en las Escrituras las
 cosas que otros hicieron o que se les mandó hacer,
@@ -340,8 +342,8 @@ se han hecho más confiados y piensan que ya conocen el camino
 y lo pueden mantener mediante argumentos innegables.
 Por lo tanto, el Señor con Sus enseñanzas permanece a gran distancia de ellos.
 
-4+++.+++ Continuar en prácticas en las que una vez fueron dirigidos por el Espíritu,
-sin la inmediata presencia y vida del Espíritu.
+4+++.+++ __Continuar en prácticas en las que una vez fueron dirigidos por el Espíritu,
+sin la inmediata presencia y vida del Espíritu.__
 Toda la adoración, toda la religión del evangelio consiste en seguir al Espíritu,
 en tener al Espíritu haciéndolo todo en nosotros y por nosotros.
 Por lo tanto, lo que el hombre haga por sí mismo está fuera de la vida,
@@ -350,8 +352,8 @@ quienes habiendo estado familiarizados con las guías y revelaciones verdaderas 
 corren tras estas para recibir refrigerio,
 y poco a poco se olvidan del Espíritu que originalmente los guió.
 
-5+++.+++ Hablar bien de los caminos que son inventados por ellos
-o de los que han imitado estando fuera de la vida.
+5+++.+++ __Hablar bien de los caminos que son inventados por ellos
+o de los que han imitado estando fuera de la vida.__
 Llamar a estos los caminos de Dios o los verdaderos caminos de la vida, es una blasfemia.
 "`Yo conozco la blasfemia de los que dicen ser judíos, y no lo son,
 sino sinagoga de Satanás`" (Apoc.
@@ -360,7 +362,7 @@ personas que pretendían ser cristianos y fingían ser todavía de la iglesia,
 aunque habían perdido la vida.
 El Espíritu del Señor dijo que esto era blasfemia.
 
-6+++.+++ Cometer idolatrías obvias o más refinadas.
+6+++.+++ __Cometer idolatrías obvias o más refinadas.__
 "`Hijitos,`" dijo Juan,
 "`guardaos de los ídolos`" (1 Juan 5:21). Él vio que el anti-cristianismo
 estaba surgiendo rápidamente y que muchos anticristos ya habían llegado.
