--- a/escritos-volumen-1/updated/08-capitulo-7.adoc
+++ b/escritos-volumen-1/updated/08-capitulo-7.adoc
@@ -1,4 +1,4 @@
-== Capítulo VII. Las Sagradas Escrituras Si Ellas Deben Ser la Verdadera Regla de Fe y de Vida
+== Capítulo VII. Las Sagradas Escrituras / Si Ellas Deben Ser la Verdadera Regla de Fe y de Vida
 
 El más grande tipo de conocimiento se da al conocer
 las cosas a través de nuestra unión con ellas,
@@ -31,8 +31,8 @@ sólo en el corazón podrá leer la cosa misma.
 
 "`Cristo es el camino, la verdad y la vida.`"
 ¿Cuál es la regla del cristiano?
-¿No es el camino de Dios su regla?
-¿No es la verdad de Dios su regla?
+¿No es el _camino_ de Dios su regla?
+¿No es la _verdad_ de Dios su regla?
 ¿No debe ser enseñada y oída la verdad en Jesús y
 sólo en Jesús? (Ef. 4:21) ¿No es Él el rey,
 el sacerdote, el profeta, el sacrificio, el camino de Dios, la vida misma,
@@ -97,7 +97,7 @@ Las Escrituras no pueden injertar el alma en Cristo, ni darle al injertado una r
 No obstante,
 el que ha oído el testimonio de las Escrituras con respecto a Cristo y ha llegado a Él,
 puede permanecer y esperar en Él para que la ley del Espíritu
-de vida sea escrita en su corazón. Esta será su regla,
+de vida sea escrita en su corazón. _Esta_ será su regla,
 la que lo sacará de la ley del pecado y muerte y lo introducirá en la tierra de la vida.
 
 Consideren ahora mansa y humildemente si las Escrituras
@@ -115,6 +115,9 @@ Las Escrituras no tenían como objetivo,
 ni fueron dadas por Dios para que fueran la regla de los hijos del nuevo pacto.
 Consideren los siguientes tres argumentos:
 
+[.small-break]
+'''
+
 1+++.+++ Las Escrituras son una regla o ley externa,
 pero expresamente dicen que la ley del nuevo pacto sería una ley interna.
 Está escrito en los profetas que todos los hijos del nuevo pacto
@@ -131,6 +134,9 @@ según ella os ha enseñado, permaneced en él`" (1 Juan 2:27). El pacto es inte
 el maestro es interno, el escrito es interno, la ley es interna,
 ahí es donde debe ser leída, aprendida y conocida,
 donde el Espíritu la enseña y la escribe.
+
+[.small-break]
+'''
 
 2+++.+++ Las Escrituras (o los escritos de Moisés y los
 profetas) no son la ley de los hijos del nuevo pacto.
@@ -182,6 +188,9 @@ La ley externa sólo era una sombra de los bienes venideros y no perfeccionó na
 pero David conocía una ley perfecta: "`La ley del Señor es perfecta,
 que convierte el alma`" (Sal.
 19:7).
+
+[.small-break]
+'''
 
 3+++.+++ Las Escrituras del Nuevo Testamento nunca se llamaron a sí mismas '`regla`', no;
 llamaron '`regla`' a otra cosa.
