--- a/escritos-volumen-1/updated/12-capitulo-11.adoc
+++ b/escritos-volumen-1/updated/12-capitulo-11.adoc
@@ -1,16 +1,18 @@
 == Capítulo XI. Algunas Directrices para el Alma Anhelante
 
+[quote.scripture, , Mateo. 11:28-30]
+____
 "`Venid a mí todos los que estáis trabajados y cargados, y yo os haré descansar.
 Llevad mi yugo sobre vosotros, y aprended de mí, que soy manso y humilde de corazón;
 y hallaréis descanso para vuestras almas; porque mi yugo es fácil, y ligera mi carga.`"
-(Mat.
-11: 28-30)
+____
 
 Algunas dulces meditaciones brotaron en mi corazón
 con respecto a esta porción de las Escrituras,
 con respiraciones del espíritu y tierno afecto hacia aquellos "`que están trabajados
 y cargados;`" meditaciones que me siento impelido a comunicar.
 
+[.numbered]
 1+++.+++ El verdadero descanso del alma está en el evangelio (el cual es "`poder
 de Dios para salvación`"). Aquí está la verdad con respecto al reino,
 donde está la vida, el gozo, la paz y el descanso eterno para el alma en Dios.
@@ -24,6 +26,7 @@ y la entrada al reino eterno es experimentada, poseída y disfrutada.
 "`ha llegado,`" dice el Mesías; y en él hay justicia,
 paz y gozo en el Espíritu puro de vida.
 
+[.numbered]
 2+++.+++ Es la voluntad del Rey de los santos que Su pueblo
 disfrute el reposo y la paz de Su evangelio.
 Él no desea que ellos estén siempre trabajados y cargados como bajo la ley,
@@ -34,6 +37,7 @@ libertad a los cautivos y vida a los muertos; para que abriera la cárcel de los
 vendara a los quebrantados de corazón y derramara aceite en los heridos.
 El Señor desea que las almas de Su pueblo disfruten lo que Él les vino a traer.
 
+[.numbered]
 3+++.+++ Cristo le ha marcado claramente el camino de Su reposo a cada alma cansada y anhelante,
 y la que camina en él no se puede perder.
 Él ha hecho claro el camino en el evangelio, tan claro, que el viajero, aún el insensato,
@@ -48,6 +52,7 @@ La verdadera fe, la fe que está en el poder de Dios y se le da al nacido de arr
 es la sustancia del reposo esperado,
 y hay un gusto real y cierto disfrute verdadero de él otorgado al que realmente cree.
 
+[.numbered]
 4+++.+++ El reposo fue en otro tiempo sentido y disfrutado
 cuando el evangelio era experimentado en el poder.
 En los primeros días del evangelio (antes de que la noche superara esa gloriosa dispensación),
@@ -74,6 +79,7 @@ y los tesoros de Su reino fueron abiertos por la llave de David en la mano del E
 De este modo sus almas tenían verdadera satisfacción
 y reposo en medida y viajaban hacia la plenitud.
 
+[.numbered]
 5+++.+++ No hay descanso para ser disfrutado en el evangelio,
 para el alma que no está bajo el yugo.
 El verdadero descanso es hallado en eso que enyuga todo
@@ -183,15 +189,18 @@ dondequiera que estén, pero sé con certeza,
 que ellos no podrán llegar a gozar de Él salvo en ese camino vivo,
 del que las Escrituras testifican que está en Aquel que es la vida.
 
+[.discourse-part]
 Pregunta: ¿Cómo puede mi pobre alma que ha llorado y gemido tanto tiempo,
 y que ha estado '`enferma de amor tras mi Amado`' llegar a caminar en Su senda,
 para que yo pueda experimentar y descansar en el poder de vida y salvación
 del que el evangelio habla ampliamente al verdadero creyente?
 
+[.discourse-part]
 Respuesta: Usted que desea disfrutar a su Amado,
 experimentar el reposo de Su evangelio y caminar en la senda que lo conduce a Él,
 espere aprender del Espíritu lo siguiente:
 
+[.numbered]
 1+++.+++ Conozca qué es lo que puede caminar en la senda de vida,
 y que ciertamente es lo único capaz de caminar en ella.
 Es lo que gime y llora, y es engendrado de Dios en usted.
@@ -210,6 +219,7 @@ la cual es Su porción. Cuando usted tome la cruz para sí y permita
 que la Semilla se esparza y se convierta en un yugo sobre usted,
 será renovado, disfrutará la vida y la herencia eterna en la Semilla.
 
+[.numbered]
 2+++.+++ Conozca la luz del Espíritu en la que usted debe caminar.
 Ahí el niño es engendrado (no, en las tinieblas de Satanás,
 ni en la sabiduría del hombre buscando conocimiento o entendimiento), y ahí camina.
@@ -241,6 +251,7 @@ debe recorrer ese terreno otra vez de regreso,
 antes de poder llegar a la verdad de su estado anterior,
 o continuar en el verdadero camino.
 
+[.numbered]
 3+++.+++ Conozca y aférrese al poder, lo único que comenzó una verdadera obra en el corazón,
 lo único que puede preservarla y lo único que puede continuarla.
 Cristo fue hecho sacerdote, no según la ley de un mandamiento carnal,
@@ -269,6 +280,7 @@ está fuera de donde está Su vida y de donde encuentra
 preservación. ¡Cuán expuesto queda él a los hoyos,
 moretones, trampas y tentaciones del enemigo!
 
+[.numbered]
 4+++.+++ Esté en guardia contra la sabiduría egoísta en cada etapa de su crecimiento,
 que no se interponga entre usted y su vida.
 Vigile que no sea engañado con una semejanza, una sombra,
@@ -288,6 +300,7 @@ Al ser engañado así,
 usted llegará a ser tan celoso en su era y generación contra
 la verdad como lo fueron los judíos en la de ellos.
 
+[.numbered]
 5+++.+++ Que nada juzgue en usted (con respecto a su propio corazón, con respecto a otros,
 o con respecto a algún camino o verdad de Dios) salvo lo que es
 nacido de Dios en su corazón. Deje que la luz en la que usted es
@@ -308,11 +321,13 @@ entonces lo que era de Dios en el corazón pronto se marchita,
 una edificación contraria es levantada y el estado del corazón cambiado.
 ¡Espere en el Señor que Él le dé el entendimiento de estas cosas!
 
+[.discourse-part]
 Pregunta: ¿Cómo puedo conocer y aferrarme al engendrado de Dios,
 y a la luz y poder del Señor,
 y evitar que se levante la sabiduría y comprensión
 carnal con respecto a las cosas de Dios?
 
+[.discourse-part]
 Respuesta: Cuando Dios engendra vida en el corazón hay un sabor de ella en la vasija,
 una calidez secreta y viva,
 una virtud que el corazón experimenta en alguna medida y por la que la vida es conocida.
@@ -401,7 +416,8 @@ está en mi corazón responder algunas preguntas con respecto a la adoración a 
 para el servicio de los que tienen tanto el deseo
 como la necesidad de instrucción de ella.
 
-Pregunta 1: ¿Quién es el adorador aceptable ante la vista de Dios?
+[.discourse-part]
+_Pregunta 1:_ ¿Quién es el adorador aceptable ante la vista de Dios?
 O, ¿a quién le ha concedido Dios Su adoración a la vista del mundo,
 ya que rechazó a los judíos y su adoración?
 
@@ -414,6 +430,7 @@ una capacidad que le permita realizar la adoración que Dios requiere de él. Ah
 esto es lo que ha de ser indagado: ¿Cuál es esta capacidad?
 ¿Quiénes son las personas que son halladas en dicha capacidad?
 
+[.discourse-part]
 Respuesta: El adorador en los tiempos del evangelio, el adorador bajo el nuevo pacto,
 es "`el que es nacido de Dios,`" el que es sacado del espíritu de las
 tinieblas de este mundo y formado de nuevo en la luz del Espíritu de Dios.
@@ -428,8 +445,10 @@ y sostener Su adoración espiritual en el mundo,
 y de provocarlos a esperar y a presionar hacia la
 capacidad de entrar en la misma adoración espiritual.
 
-Pregunta 2: ¿Cuál es el lugar de adoración?
+[.discourse-part]
+_Pregunta 2:_ ¿Cuál es el lugar de adoración?
 
+[.discourse-part]
 Respuesta:
 El único lugar de adoración en el nuevo pacto es
 aquel donde los adoradores espirituales se reúnen.
@@ -459,9 +478,11 @@ almas y cuerpos en sacrificio vivo al Padre de vida.
 Aquí se encuentran con tal presencia y poder glorioso del Padre,
 como ninguno que no sea verdadero judío haya jamás conocido.
 
-Pregunta 3: ¿Qué es la adoración, o que son los sacrificios,
+[.discourse-part]
+_Pregunta 3:_ ¿Qué es la adoración, o que son los sacrificios,
 los que los verdaderos adoradores le ofrecen a Dios en este lugar santo?
 
+[.discourse-part]
 Respuesta: Los dones que provienen de Su Espíritu; estos son los únicos que se ofrecen.
 Las respiraciones anhelantes que el Padre pone en el corazón del niño,
 son devueltas a Él en el mismo Espíritu de vida,
@@ -481,8 +502,10 @@ los corazones de los que están reunidos y congregados en Su nombre.
 La vida brota en las vasijas terrenales y el deleite es
 precioso para todos los que tienen sus sentidos espirituales.
 
-Pregunta 4: ¿Cuál es el tiempo de ofrecer estos dones?
+[.discourse-part]
+_Pregunta 4:_ ¿Cuál es el tiempo de ofrecer estos dones?
 
+[.discourse-part]
 Respuesta: El tiempo de la verdadera adoración está en la voluntad de Dios.
 Estos son Sus dones, y el tiempo de ellos está en la voluntad del Dador.
 Orar es un don.
@@ -499,9 +522,11 @@ Oír la palabra de vida requiere un oído vivificado.
 Conocer los tiempos y sazones del Espíritu requiere tanto haber
 sido engendrado por el Espíritu como estar familiarizado con Él.
 
-Pregunta 5:
+[.discourse-part]
+_Pregunta 5:_
 ¿Era esta la adoración de los antiguos cristianos en los días de los apóstoles?
 
+[.discourse-part]
 Respuesta: Busquen en las Escrituras.
 ¿No llegaron ellos a la Nueva Jerusalén? ¿Dónde ofrecieron sus sacrificios?
 ¿Los ofrecieron en la vieja Jerusalén,
@@ -523,11 +548,13 @@ por más tiempo de las preciosas cosas de Su reino,
 con comida áspera y seca que sólo gratifica la parte terrenal,
 pero que no nutre la vida inmortal!
 
-Pregunta 6:
+[.discourse-part]
+_Pregunta 6:_
 ¿Cómo llegó a transformarse y a cambiar tanto la adoración
 de Dios de un poder vivo a formas muertas y formales,
 como en las que son hallados generalmente los adoradores en el mundo?
 
+[.discourse-part]
 Respuesta: El enemigo lo ha hecho, con el permiso de Dios.
 Al Señor le plació permitirle prevalecer contra la verdad hasta ahora, es decir,
 entrar en la forma externa de ella, engendrar ahí hombres en dicha forma,
@@ -538,18 +565,24 @@ y mediante ella pelea contra el verdadero poder.
 
 === Algunas Preguntas y Respuestas Relacionadas a la Conversión y a la Ternura de Consciencia
 
+[.discourse-part]
 Pregunta: ¿De qué manera ocurre la conversión?
 
+[.discourse-part]
 Respuesta:
 Volviendo a los hombres de las tinieblas a la luz y del poder de Satanás a Dios.
 
+[.discourse-part]
 Pregunta: ¿Cuándo se convierte un hombre?
 
+[.discourse-part]
 Respuesta: Cuando es reunido con la luz y el poder,
 fuera de las tinieblas del pecado y de los dominios de Satanás.
 
+[.discourse-part]
 Pregunta: ¿Cómo se convierte un hombre?
 
+[.discourse-part]
 Respuesta: Por la operación de la luz y el poder de Dios sobre su consciencia.^
 footnote:[Es importante señalar que tanto la mente como
 la consciencia del incrédulo están naturalmente corrompidas.
@@ -561,64 +594,82 @@ Más bien,
 es Cristo la Luz en la consciencia el que lleva al hombre el conocimiento de la verdad,
 y cuando obedece, a la transformación del alma.]
 
+[.discourse-part]
 Pregunta: ¿En qué condición está la consciencia antes de que Dios obre sobre ella?
 
+[.discourse-part]
 Respuesta: Dura y corrupta.
 Endurecida por los razonamientos egoístas y oscuras imaginaciones
 contra las convicciones de la luz y operaciones del poder de Dios.
 Está corrompida por el pecado y la iniquidad que moran en ella.
 
+[.discourse-part]
 Pregunta: ¿Qué hace Dios por medio de Su obra en ella?
 
+[.discourse-part]
 Respuesta: Suave y tiernamente,
 ponerla en condiciones de recibir las impresiones de Su Espíritu.
 Mediante la influencia y poder de Su Espíritu en la consciencia,
 abre el oído para que escuche Su voz y prepare el corazón para que siga Su guía.
 
+[.discourse-part]
 Pregunta: ¿Cómo continúa Dios Su obra en el alma convertida?
 
+[.discourse-part]
 Respuesta: Manteniéndola humillada y tierna,
 fuera de la sabiduría propia y de los endurecidos razonamientos del entendimiento humano.
 Por estos medios la mantiene dócil a la luz y al poder de Su Espíritu.
 
+[.discourse-part]
 Pregunta: ¿Sólo una consciencia tierna es apta para ser trabajada por Dios?
 
+[.discourse-part]
 Respuesta: Sí; en realidad, únicamente esa.
 El corazón duro no considera la voz de Dios y es inflexible y obstinado contra ella.
 Siempre tiene a mano algo de la sabiduría o voluntad de
 la carne con la cual resistir la voz y guía de Dios.
 
+[.discourse-part]
 Pregunta: ¿Quién preserva la consciencia tierna?
 
+[.discourse-part]
 Respuesta: El Señor de la consciencia.
 El que la hizo conoce el temperamento de ella y sólo Su luz y poder
 son capaces de conservarla en la ternura en la que la formó.
 
+[.discourse-part]
 Pregunta: ¿Qué endurece la consciencia?
 
+[.discourse-part]
 Respuesta: La sabiduría de la carne.
 El hombre, tras ganar una sabiduría fuera de la luz de Dios mediante las imaginaciones,
 razonamientos y fortalezas de la misma, se endurece contra Dios.
 
+[.discourse-part]
 Pregunta:
 ¿Qué debe vigilar un hombre si desea que la obra de conversión continúe en su corazón?
 
+[.discourse-part]
 Respuesta:
 Debe ser cuidadoso en volverse y evitar los razonamientos de la sabiduría humana,
 y tener su ojo y oído abiertos a la luz y voz del Espíritu de Dios,
 a fin de que su consciencia pueda ser mantenida recta y limpia delante del Señor.
 
+[.discourse-part]
 Pregunta: ¿Qué mancha la consciencia?
 
+[.discourse-part]
 Respuesta: Cualquier desobediencia al Espíritu de Dios.
 Escuchar o seguir la voz de un espíritu extraño.
 Esto permite que entre la oscuridad que contamina,
 tal como la luz purifica.
 
+[.discourse-part]
 Pregunta:
 ¿Tiene entonces un hombre que tener la expectativa de tal
 cosa como la guía del Espíritu de Dios en su consciencia?
 
+[.discourse-part]
 Respuesta: Un hombre no puede heredar el reino de Dios a menos que haya nacido de nuevo,
 es decir, a menos que haya "`nacido del Espíritu.`"
 Así dice la Escritura y así dice la experiencia de
@@ -629,10 +680,12 @@ Si no lo hace,
 el espíritu de las tinieblas pronto ganará terreno en el
 hombre y gradualmente lo recuperará de nuevo en su dominio.
 
+[.discourse-part]
 Pregunta: Si en definitiva esto es cierto,
 entonces el camino de la verdadera religión es difícil
 y hay pocos que son hallados en la verdad de él.
 
+[.discourse-part]
 Respuesta: El camino de la verdadera religión es difícil en verdad,
 y completamente contrario tanto a la sabiduría como a la voluntad humana.
 De hecho, el hombre no puede entrar en él, ni caminar en él,
@@ -645,18 +698,22 @@ sino que debe volverse de lo que es glorioso a los ojos de los hombres y sacrifi
 al Señor lo que para ellos es una abominación. (Éxo. 8:26) Así que,
 el que sea aprobado ante la vista de Dios deberá esperar ser condenado por los hombres.
 
+[.discourse-part]
 Pregunta:
 ¿Por qué ha puesto Dios a Su pueblo en todas las edades y generaciones en tal dificultad,
 como es caminar de manera contraria al mundo y ser objeto de su odio,
 desdén y persecución?
 
+[.discourse-part]
 Respuesta: ¿Cómo podría ser de otra manera,
 siendo que Su pueblo es engendrado de un Espíritu que es contrario al
 mundo y que testifica contra él al mostrar que su obras son malas?
 ¿Cómo no va a volverse el espíritu del mundo contra estos y odiarlos y perseguirlos?
 
+[.discourse-part]
 Pregunta: ¿Por cuánto tiempo será de esta manera?
 
+[.discourse-part]
 Respuesta:
 Hasta que la verdad sea levantada por el poder de Dios con
 dominio sobre el espíritu y poder de las tinieblas.
@@ -669,8 +726,10 @@ sino que en el día del Señor se levantará sobre el transgresor.
 En ese día Israel será glorioso con Su Dios, recibirá elogios de Él,
 y será aliviado de todo lo que lo ha oprimido.
 
+[.discourse-part]
 Pregunta: ¿Habrá un día así?
 
+[.discourse-part]
 Respuesta: Las Escrituras testifican de ese día;
 el día en el que el Señor "`solo será exaltado,`" en el que "`quitará la afrenta
 de su pueblo de toda la tierra`" y derribará "`todo lo alto y levantado`" por
