--- a/escritos-volumen-1/updated/13-capitulo-12.adoc
+++ b/escritos-volumen-1/updated/13-capitulo-12.adoc
@@ -1,14 +1,18 @@
-== Capítulo XII. Algunas Preguntas y Respuestas Para Que los Ojos Sean Abiertos
+== Capítulo XII. Algunas Preguntas y Respuestas / Para Que los Ojos Sean Abiertos
 
+[.discourse-part]
 Pregunta: ¿Cómo llegó a caer el hombre de su condición original?
 
+[.discourse-part]
 Respuesta: No voluntariamente ni por inclinación propia,
 sino engañado para que considerara el deseo de ensanchar su bienaventuranza
 más allá de los límites de la voluntad de su Creador.
 
+[.discourse-part]
 Pregunta: ¿Cómo pudo entrar tal tentación en el hombre cuando era puro y santo,
 inclinado hacia el bien y en contra del mal, según la imagen de su Creador?
 
+[.discourse-part]
 Respuesta:
 El hombre no fue creado para que disfrutara perfección en sí mismo separado de su Creador,
 o para que viviera por sí mismo, sino para que viviera en dependencia.
@@ -23,8 +27,10 @@ estado puro en el que había sido hecho.
 De esta manera fue cogido en la trampa de la miseria y llevado a esa pérdida
 en la que todos los hijos de Adán siguen esclavizados hasta el día de hoy.
 
+[.discourse-part]
 Pregunta: ¿Cuál es el estado del hombre desde la caída?
 
+[.discourse-part]
 Respuesta: Es un estado de tinieblas, un estado de muerte,
 un estado de profunda esclavitud, en el que su alma,
 su cuerpo y su espíritu se han convertido en tinieblas en cuanto
@@ -33,11 +39,13 @@ el hombre es cautivo de ese espíritu que ha entrado en él por haberlo
 oído. Dicho espíritu mora y gobierna ahora en él en las tinieblas,
 como Dios lo hacía antes en la luz.
 
+[.discourse-part]
 Pregunta: ¿Cómo es el hombre tinieblas?
 ¿Cómo es el hombre muerte?
 ¿Está su alma o su cuerpo muerto en cuanto a su ser?
 ¿Cómo es esto?
 
+[.discourse-part]
 Respuesta: El hombre no está muerto en lo que se refiere a su ser, ni en alma,
 ni en cuerpo, pero sí en cuanto al estado recto, puro y santo de cada uno.
 Las vasijas siguen siendo las mismas en el ser,
@@ -48,10 +56,12 @@ son los mismos en cuanto a su ser o materia,
 pero todos están completamente leudados y ahora habita
 otro rey en ellos que reina sobre ellos.
 
+[.discourse-part]
 Pregunta: Entonces,
 ¿es necesaria la destrucción de la razón del hombre o de reducirla a nada,
 o sólo es necesario un cambio de levadura?
 
+[.discourse-part]
 Respuesta: El hombre se ha convertido en otra cosa por haber caído de la vida.
 Está tan envenenado por el pecado y la corrupción que debe
 ser totalmente quebrantado y reducido a nada,
@@ -68,9 +78,11 @@ de la razón se abre demasiado rápido y no se mantiene fijo en la luz de la vid
 el traidor entrará por esa puerta de nuevo y llevará al alma a la muerte,
 incluso después de haber saboreado la dulce y preciosa virtud y poder redentor.
 
+[.discourse-part]
 Pregunta:
 ¿Puede el hombre en la caída ver su estado caído y así buscar recuperarse de ella?
 
+[.discourse-part]
 Respuesta:
 Es imposible para el hombre hacerlo sin algo de luz brillando sobre él desde el Redentor.
 ¿Cómo pueden las tinieblas descubrir las tinieblas?
@@ -80,9 +92,11 @@ qué puede ver ese ojo sino aquello que está en concordancia con las tinieblas,
 juzgando el mal como bien y el bien como mal,
 lo amargo como dulce y lo dulce como amargo.
 
+[.discourse-part]
 Pregunta: Pero, ¿no tiene todo hombre al menos algo de luz, en uno u otro momento,
 por la que puedan ver el bien o el mal en alguna medida?
 
+[.discourse-part]
 Respuesta:
 Este ver no proviene de la luz de la naturaleza del
 hombre tal y como esta es ahora en la caída (la cual,
@@ -94,10 +108,12 @@ por medio del resplandor de su luz.
 El Espíritu vivo también lucha con el hombre, atrayéndolo de uno hacia el otro,
 según el beneplácito del Señor.
 
+[.discourse-part]
 Pregunta: Pero,
 ¿no tiene el hombre una especie de luz natural en la condición
 caída que descubra para él el bien y el mal?
 
+[.discourse-part]
 Respuesta: No, no una verdadera luz, ni un verdadero descubrimiento,
 lo único que tiene es algo que el enemigo pone en el hombre para mantenerlo
 en los enredos del engaño y libre de la sospecha de este.
@@ -118,8 +134,10 @@ de placer en la sabiduría humana y de libertad fuera de la vida,
 y lo introduce en una consciencia de su carencia y anhelos
 tras el verdadero jardín del Dios vivo.
 
+[.discourse-part]
 Pregunta: ¿Se equivoca el hombre entonces en su juicio del bien y del mal desde la caída?
 
+[.discourse-part]
 Respuesta: Sí, se equivoca por completo.
 Por este error el hombre se coloca a sí mismo y establece
 su residencia en el reino de las tinieblas,
@@ -130,8 +148,10 @@ tanto en personas individuales como en sociedades el mal es seguido y afirmado c
 y el verdadero bien es suprimido como mal mediante la obra del
 misterio de las tinieblas en los corazones de los hombres.
 
+[.discourse-part]
 Pregunta: ¿Cuál es entonces el verdadero estado y condición del hombre en la caída?
 
+[.discourse-part]
 Respuesta: Un estado de luz falsa, vida falsa, libertad falsa.
 A él le parece avanzar en sabiduría por encima de la baja,
 vacía y desnuda condición de inocencia (la cual es nada y no tiene nada,
@@ -143,8 +163,10 @@ La vida de justicia le parece un yugo, una especie de servidumbre,
 y cree que es libre de la restricción de ella porque tiene
 vida en sí mismo y es extremadamente sabio en su opinión.
 
+[.discourse-part]
 Pregunta: ¿Cuál es la obra de redención?
 
+[.discourse-part]
 Respuesta: Purgar la vieja levadura de la vasija,
 purificar la vasija de todas las falsas apariciones de la luz,
 derribar todas las fortalezas del enemigo en la mente, todos los razonamientos,
@@ -153,24 +175,30 @@ Luego,
 crear y formar nuevamente la vasija a imagen de la sabiduría
 y pureza en la que fue formada primero.
 
+[.discourse-part]
 Pregunta: ¿Quién hace este trabajo, o quién redime al hombre de la caída?
 
+[.discourse-part]
 Respuesta: La Palabra Eterna o el Hijo del Padre, es decir,
 la sabiduría y el poder que salieron de la fuente para crear todas las cosas.
 La misma Palabra sale del seno del Padre para purificar a la criatura y así llevarla
 de vuelta (habiendo sido purificada y limpiada) a Su seno de nuevo.
 
+[.discourse-part]
 Pregunta: ¿Con qué redime esta Palabra o Redentor?
 
+[.discourse-part]
 Respuesta: Con Su propia vida, con Su propia sangre,
 con Su propia virtud y pureza eternas.
 Él desciende a las profundidades de la tierra, se hace carne ahí,
 siembra Su propia Semilla en Su tierra preparada, engendra de Su carne y de Su hueso,
 a Su propia semejanza, y alimenta con Su propia carne y sangre para vida eterna.
 
+[.discourse-part]
 Pregunta: ¿Qué es esta vida?
 O, ¿cómo se manifiesta inicialmente en las tinieblas?
 
+[.discourse-part]
 Respuesta: Ella es la luz de los hombres.
 Ella le dio luz a Adán al principio,
 otra vez a él después de la caída y a todos los hombres
@@ -178,44 +206,56 @@ desde la caída. Es Su naturaleza alumbrar.
 Ella alumbraba bajo la ley, alumbró bajo el evangelio antes de la apostasía,
 y de nuevo desde la apostasía.
 
+[.discourse-part]
 Pregunta: ¿Cómo alumbra la luz?
 
+[.discourse-part]
 Respuesta: Mediante su brillo.
 La Palabra eterna se mueve, la vida se abre, la luz brilla.
 Esto, en menor grado, es un principio de redención, y en su plenitud,
 es redención perfeccionada.
 
+[.discourse-part]
 Pregunta: ¿Cómo obra redención la luz en su brillo?
 
+[.discourse-part]
 Respuesta: De dos formas.
 Primero, al volver el corazón de las tinieblas hacia sí misma.
 Segundo, al ejercitar el corazón que ha vuelto.
 
+[.discourse-part]
 Pregunta: ¿Cómo vuelve el corazón de las tinieblas?
 
+[.discourse-part]
 Respuesta: La luz, mediante su brillo e iluminación encuentra lo suyo,
 lo abre y lo toca con una virtud secreta,
 la cual persuade y traslada el corazón del principio
 y poder de la muerte y tinieblas a su propia Fuente.
 
+[.discourse-part]
 Pregunta: ¿Pueden ser apagadas estas persuasiones y la obra de Dios detenida?
 
+[.discourse-part]
 Respuesta: La planta del Señor es muy tierna, su Espíritu puro celoso,
 el enemigo muy fuerte y sutil, a tal punto,
 que la planta misma puede ser fácilmente aplastada,
 el Espíritu afligido y apagado y el cautiverio redoblado.
 
+[.discourse-part]
 Pregunta: ¿Cómo ejercita Dios el corazón que se vuelve?
 
+[.discourse-part]
 Respuesta: En fe y obediencia,
 a través de muy grandes variaciones y cambios de condiciones.
 Él lo ejercita para que crea en Su voz,
 obedezca Su voz y lo siga en lo que sea que requiera y hacia donde Él lo lleve.
 
+[.discourse-part]
 Pregunta:
 ¿Cuáles son los varios estados o condiciones en los que
 Dios ejercita el espíritu del hombre en fe y obediencia?
 
+[.discourse-part]
 Respuesta: Los estados y condiciones particulares son innumerables,
 pero pueden ser resumidos bajo estos tres principios generales: Primero,
 echar abajo el edificio anterior.
@@ -237,10 +277,12 @@ Entonces, después de haber sido preparados para su entrada en la tierra de vida
 viene el estado en el que las piedras son reconstruidas
 en un nuevo edificio a fin de que la vida more en él.
 
+[.discourse-part]
 Pregunta: Explique más claramente estos estados y los ejercicios en estos.
 Primero muestre cuál es el estado del alma en el Egipto espiritual,
 cuando el Señor la visita ahí con Su luz.
 
+[.discourse-part]
 Respuesta: Es un estado de profunda esclavitud y gemido bajo el poder de las tinieblas,
 donde las amargas opresiones se incrementan a medida
 que aumentan la sensibilidad y el cansancio del alma.
@@ -254,8 +296,10 @@ Pero todavía es dejada en manos del enemigo,
 y diariamente siente la amarga servidumbre de la poderosa ley del pecado
 y muerte que brota en el corazón y fluye a través de los miembros.
 
+[.discourse-part]
 Pregunta: ¿Cómo son ejercitadas la fe y la obediencia aquí?
 
+[.discourse-part]
 Respuesta: Al creer la promesa, al esperar la promesa,
 al sentir algunos remotos jalones de la vida y unirse a ellos en la medida de lo posible,
 en este estado oscuro y esclavizante.
@@ -263,8 +307,10 @@ Aquí ocurre un reconocimiento del verdadero Príncipe y una
 inclinación hacia Él aún en este estado de cautiverio,
 hasta que a Él le plazca romper las ataduras.
 
+[.discourse-part]
 Pregunta: ¿Cuál es el estado del alma en el desierto espiritual?
 
+[.discourse-part]
 Respuesta: Es un estado de espera; se espera la guía del Líder,
 recibir la dirección y las leyes que provienen del Líder y en el
 que se sigue al Líder por donde a Él le plazca conducir.
@@ -273,8 +319,10 @@ estrecheces y necesidades con las que Él considera conveniente ejercitar al esp
 para que esa parte que no ha de heredar se desgaste
 y para preparar al verdadero heredero para la herencia.
 
+[.discourse-part]
 Pregunta: ¿Cómo son ejercitadas aquí la fe y la obediencia?
 
+[.discourse-part]
 Respuesta:
 Al esperar en la luz la guía de la ley de la vida y al sujetarse
 al Líder contentos con todas Sus administraciones ahí;
@@ -290,15 +338,19 @@ cansancio y descontento que se levanten de la parte terrenal,
 sean desgastados gradualmente y una vasija pura sea
 preparada para que el nacimiento puro brote y aparezca.
 
+[.discourse-part]
 Pregunta: ¿Qué es el Canaán espiritual, o estado celestial, o estado del evangelio?
 
+[.discourse-part]
 Respuesta: Es el estado de regeneración o de renovación en la vida e imagen pura,
 donde el edificio hecho sin manos es erigido,
 donde hay un crecimiento dulce y pacífico en la vida
 y un disfrute fresco y satisfactorio de la vida.
 
+[.discourse-part]
 Pregunta: ¿Cómo son ejercitadas la fe y la obediencia aquí?
 
+[.discourse-part]
 Respuesta: Al permanecer en la vid,
 al extraer de la vid la savia y la virtud y retornarlo a ella,
 y al vivir según la voluntad de la vid en la libre administración de la misma.
@@ -306,9 +358,11 @@ En consecuencia,
 las obras son excluidas junto con el yo (de donde
 provienen) y la vid se convierte en el todo en todos.
 
+[.discourse-part]
 Pregunta: ¿Son los estados de Egipto,
 el desierto y Canaán tan distintos espiritualmente como lo eran naturalmente?
 
+[.discourse-part]
 Respuesta: Sí, existen diferencias entre los estados espirituales.
 Es posible que un hombre esté espiritualmente en Egipto,
 pero de ningún modo en el desierto o Canaán. También existe un estado en el desierto,
@@ -326,11 +380,13 @@ sino que al permanecer baja y pequeña en la pequeña Semilla,
 el reino y la herencia eterna crezcan día a día en el alma, y el alma crezca, a su vez,
 día a día dentro de ella y se ensanche en ella.
 
+[.discourse-part]
 Pregunta: ¿Hay algún regreso a Egipto o al desierto,
 después de que el alma ha avanzado hasta muy alto,
 después de que la entrada a la herencia eterna ha sido administrada
 y el alma ha encontrado un lugar de reposo en la vida?
 
+[.discourse-part]
 Respuesta: El enemigo permanece cerca para engañar y tiene poder para tentar.
 Si uno escucha sus tentaciones,
 en esa misma medida se va a producir una salida de la vida pura y un regreso al cautiverio
@@ -339,11 +395,13 @@ fuera de ella hay muerte y destrucción eternas.
 
 === La Enseñanza, Disciplina y Ejercicio del Alma
 
+[.discourse-part]
 Pregunta: ¿Cómo redime al hombre el Hijo de Dios o la Palabra Eterna,
 en Quien está la luz de la vida, y lo saca del estado caído,
 del reino de las tinieblas y muerte,
 y lo lleva al reino de eterna justicia y paz en la vida?
 
+[.discourse-part]
 Respuesta: De tres maneras: Primero, hiriéndolo en el estado natural y corrupto,
 rompiendo así su paz y placer en el reino de las
 tinieblas y haciendo que se canse de este.
@@ -351,8 +409,10 @@ Segundo, debilitándolo bajo las enseñanzas y azotes de la ley.
 Tercero, sanándolo y vendándolo con el aceite de salvación,
 en el poder de la vida indestructible, el cual es el evangelio.
 
+[.discourse-part]
 Pregunta: ¿Cómo lo hiere Dios en el estado natural y corrupto?
 
+[.discourse-part]
 Respuesta: Persiguiéndolo con Su luz,
 la cual le permite ver su condición y le descubre el mal y el peligro de ella.
 Así desteta su corazón de dicho estado y lo hace buscar y anhelar un redentor.
@@ -384,14 +444,18 @@ la libertad en el Señor, el reposo, el gozo,
 el pleno contentamiento y la felicidad son cosechados
 por el alma que sigue al Cordero hasta allí.
 
+[.discourse-part]
 Pregunta: ¿Cómo debilita Dios a la a criatura bajo las enseñanzas y azotes de la ley?
 
+[.discourse-part]
 Respuesta: Ejercitándola con respecto al bien y al mal,
 y corrigiéndola por su incredulidad y desobediencia, cuando la encuentra buena,
 justa y necesaria para él.
 
+[.discourse-part]
 Pregunta: ¿Cómo ejercita Dios al hombre con respecto al bien y al mal, y cómo lo corrige?
 
+[.discourse-part]
 Respuesta:
 Después de que Él ha sacado al hombre de debajo del
 poder de las tinieblas en alguna medida,
@@ -415,16 +479,20 @@ debido a su debilidad por causa de la carne,
 y por la fuerza y ventajas que la corrupción del
 corazón y el príncipe de las tinieblas tienen.
 
+[.discourse-part]
 Pregunta: ¿Cuál es el beneficio de estos ejercicios sobre el alma?
 
+[.discourse-part]
 Respuesta: Ellos ablandan, ellos quebrantan,
 ellos hacen que el corazón sea tierno y apto para
 ser moldeado por la virtud y poder eternos,
 en una vasija para el poder.
 
+[.discourse-part]
 Pregunta:
 ¿Hacia cuáles condiciones espirituales dirigen estos ejercicios el corazón o la mente?
 
+[.discourse-part]
 Respuesta: Hacia unas muy preciosas.
 Por ejemplo: En primer lugar, hacen que el espíritu sea pobre.
 Las incursiones diarias del pecado y de la corrupción que
@@ -521,10 +589,12 @@ Lo que haga falta aquí será sentido interiormente,
 conforme el alma espera en Dios y en la guía de Su Espíritu, a través de las enseñanzas,
 azotes y angustias de la ley.
 
+[.discourse-part]
 Pregunta:
 ¿Con qué tipo de cosas ejercita el Señor los espíritus de Su Israel para
 llevar sus corazones hacia estas y otras preciosas condiciones similares?
 
+[.discourse-part]
 Respuesta: Con varias clases y tipos de cosas, tanto externas como internas, tales como:
 En primer lugar, con oposiciones,
 críticas e interrupciones provenientes de la parte terrenal,
@@ -572,8 +642,10 @@ se aflige el pobre y recto corazón entre la fe y la incredulidad,
 entre la obediencia y la desobediencia,
 sin saber cuándo es arrastrado hacia adelante o hacia atrás, o por quién!
 
+[.discourse-part]
 Pregunta: ¿Cuándo comienzan estos ejercicios y por cuánto tiempo continúan?
 
+[.discourse-part]
 Respuesta: El Señor empieza a ejercitar el alma incluso en Egipto.
 Porque después de la promesa de liberación del Faraón espiritual,
 la esclavitud se acrecienta,
@@ -590,11 +662,13 @@ todavía queda algo que probar y someter en Israel,
 en caso de que se exalte con la gloria y plenitud
 de su propio estado y empiece a olvidar a su Dios.
 
+[.discourse-part]
 Pregunta: ¿Por qué ejercita Dios a Su Israel de este modo?
 ¿Por qué los conduce de esta forma tan complicada,
 por qué no los lleva de una manera más fácil y rápida
 a la posesión eterna y plenitud de la misma?
 
+[.discourse-part]
 Respuesta: Porque el estado y condición de ellos lo requiere.
 Porque de otra manera no podrían ser purificados y preparados para la vida.
 Sus vasijas no serían tan amplias como para recibir
@@ -603,8 +677,10 @@ si no fuera por este camino de sabiduría. En él Dios ejercita y
 trata cada grieta de sus espíritus hasta que los haya preparado
 y haya detenido la entrada de la muerte en todas partes.
 
+[.discourse-part]
 Pregunta: ¿Cómo los purifica y los ensancha estos ejercicios?
 
+[.discourse-part]
 Respuesta: En primer lugar, prueban la fuerza y la virtud de la vida en ellos,
 y les descubre su mayor necesidad de ella.
 En tiempos de prosperidad del alma parece haber suficiente,
@@ -631,10 +707,12 @@ Por tanto, lo que entre ahí y viva y permanezca ahí, debe ser pobre,
 debe estar vacío y desnudo, debe ser nada y permanecer siendo nada por siempre.
 Pero si recoge algo de la plenitud y llega a ser algo en sí mismo, será excluido.
 
+[.discourse-part]
 Pregunta:
 ¿Cómo cura y venda Dios lo que ha herido y quebrado
 en pedazos con Sus varios y frecuentes ejercicios?
 
+[.discourse-part]
 Respuesta:
 Al abrir el poder de la vida indestructible en la
 vasija que Él ha purificado y preparado cuidadosamente,
@@ -653,8 +731,10 @@ Este es el fin que Dios busca con las visitaciones y guías de Su semilla.
 de la "`copa de ira`" sin desmayarse ni sentarse en el camino,
 sino que siguen al Pastor fiel y Líder de Israel, hasta llegar aquí!
 
+[.discourse-part]
 Pregunta: ¿Cuál es el gran peligro en el camino de la vida?
 
+[.discourse-part]
 Respuesta:
 El gran peligro es ascender un paso más alto de lo
 que pueden soportar el estado y la condición presentes.
@@ -666,8 +746,10 @@ de modo que ya no queda más que la prostitución de la vida.
 De hecho, el corazón se exalta y presume en el camino de sus prostituciones,
 como si este fuera la cama pura y la más excelente forma de disfrutar la vida.
 
+[.discourse-part]
 Pregunta: ¿Cuál es la manera de preservarse de esto?
 
+[.discourse-part]
 Respuesta: Vigilando la vida,
 manteniéndose bajo el temor y cerca de la experiencia viva de esto.
 Aquí el ambicioso es excluido o espiado tan pronto como empieza a entrar,
@@ -803,10 +885,12 @@ En efecto, la virtud que proviene de Dios sólo puede responderle a Dios,
 y la criatura es aceptada únicamente en la medida que se
 encuentre con y en la Fuente y Padre de la vida.
 
+[.discourse-part]
 Pregunta: Pero si la obra de redención es forjada por el poder creativo de Dios,
 ¿por qué se topa con tantos obstáculos e interrupciones, y a veces, hasta es vuelta?
 ¿Puede algo detener el poder creativo de Dios?
 
+[.discourse-part]
 Respuesta: Hay tres cosas involucradas en la redención. Primera,
 hay una emisión de gracia gratuita, amor, virtud y poder divino hacia la criatura.
 Segunda, de esta manera hay una revelación del estado de la criatura,
@@ -833,16 +917,19 @@ según le plazca al alfarero favorecer o tomar ocasión contra ella.
 
 === El Triple Estado del Hombre
 
-Primero, hay un estado gentil o estado de la naturaleza.
+[.numbered]
+_Primero,_ hay un estado gentil o estado de la naturaleza.
 
-Segundo, hay un estado judío o de la administración de la ley,
+[.numbered]
+_Segundo,_ hay un estado judío o de la administración de la ley,
 en el que Dios toma al hombre bajo Su propia instrucción,
 dándole a conocer Su voluntad y exigiéndole obediencia.
 Y no sólo esto,
 sino que también lo dirige hacia el maestro interior y al principio del temor puro,
 que es el lugar de la enseñanza e instrucciones de la sabiduría.
 
-Tercero, hay un estado del evangelio o estado de la fe,
+[.numbered]
+_Tercero,_ hay un estado del evangelio o estado de la fe,
 donde la Semilla es levantada y vive.
 Sí, la Semilla que hace la voluntad y recibe la promesa es conocida,
 disfrutada y sentida brotando en el interior.
@@ -895,69 +982,89 @@ de Él y encuentres el soplo de vida en Él para siempre!
 
 === Para Aquellos que Reclaman Falta de Poder de Dios
 
+[.discourse-part]
 Pregunta: ¿Qué es Dios?
 
+[.discourse-part]
 Respuesta: Él es la fuente de seres y naturalezas,
 la sustancia interna de todo lo que aparece externamente, el que crea, sostiene,
 consume y lleva a nada, según le place.
 
+[.discourse-part]
 Pregunta: ¿Cuáles son sus mandamientos?
 
+[.discourse-part]
 Respuesta: Son muchos, pero todos pueden ser referidos a estos dos principales:
 Amar a Dios por encima de todo y amar al prójimo como a sí mismo,
 haciéndole a él en todos los sentidos,
 como a uno le gustaría que él hiciera con uno en caso similar.
 
+[.discourse-part]
 Pregunta: ¿Cómo puede realizar el hombre esto?
 
+[.discourse-part]
 Respuesta: Sólo recibiendo la Semilla de vida de Dios y manteniéndose cerca de ella.
 
+[.discourse-part]
 Pregunta: ¿Cómo puede un hombre recibir la Semilla de vida de Dios?
 
+[.discourse-part]
 Respuesta: Dios está cerca de todos los hombres con el aliento de Su vida,
 soplando sobre ellos de tiempo en tiempo de acuerdo a Su beneplácito.
 Cada vez que el espíritu del hombre se abre a la vida y la bebe,
 esta se convierte en Semilla de vida en él esparciéndose
 hasta cubrirlo y leudándolo para vida eterna.
 
+[.discourse-part]
 Pregunta:
 ¿Qué le impide al hombre recibir esta Semilla de vida y mantenerse cerca de ella?
 
+[.discourse-part]
 Respuesta: La semilla carnal, la cual es contraria al conocimiento,
 temor y obediencia al Señor y a todo lo que brota del poder de Su vida.
 
+[.discourse-part]
 Pregunta: ¿Cómo llegó esta semilla carnal al hombre?
 
+[.discourse-part]
 Respuesta: Fue sembrada por el enemigo en el alma del hombre.
 Este le dio entrada en su espíritu al oír sus sugerencias y tentaciones.
 
+[.discourse-part]
 Pregunta: ¿Qué ayuda tiene el hombre contra esta semilla carnal?
 
+[.discourse-part]
 Respuesta: Ninguna en sí mimo,
 pero al ser tocado gratuitamente por la Semilla de vida y gustarla,
 debe esperar en la misericordia y gracia de Dios la manifestación de Su luz y poder,
 para que le descubra la naturaleza maligna y el curso de su propio corazón,
 y corte sus deseos, razonamientos e imaginaciones corruptas.
 
+[.discourse-part]
 Pregunta: ¿Cómo puede un hombre llegar a creer en esta Semilla de vida?
 
+[.discourse-part]
 Respuesta: Al experimentar Su naturaleza;
 esperando experimentar algo engendrado por esa Semilla de vida.
 Ahí brota Su luz, brota Su vida, brota Su amor,
 aparece Su poder oculto y Su sabiduría y bondad preservadoras
 son hechas manifiestas al alma que se aferra a esto.
 
+[.discourse-part]
 Pregunta: ¿Cómo puede un hombre llegar a obedecer esta Semilla?
 
+[.discourse-part]
 Respuesta: En la fe, al verla y aferrarse a ella,
 es emitida fuerza de la Semilla a la criatura y la
 hace capaz de realizar todo lo que le pide.
 
+[.discourse-part]
 Pregunta:
 ¿Por qué las personas que llegan a un verdadero comienzo
 de la vida y a un fervoroso anhelo en pos de Dios,
 se sienten tan débiles y se quejan tanto por la falta de poder?
 
+[.discourse-part]
 Respuesta: Porque el enemigo interpone sus razonamientos entre ellas y su fe.
 Las tinieblas, el principio de incredulidad,
 se encuentra cerca y está levantando lodo (tanto
@@ -966,16 +1073,20 @@ Así, en la medida que se interpone entre estas,
 perturba tanto los movimientos del alma hacia su fuente de vida,
 como el claro burbujeo de la fuente en el alma y su flujo a través de ella.
 
+[.discourse-part]
 Pregunta: ¿Qué requiere Dios del hombre?
 
+[.discourse-part]
 Respuesta: Él requiere arrepentimiento, fe y obediencia del hombre.
 Que se vuelva a Su llamado de las tinieblas a la luz;
 que confíe en la luz y se una a ella y que no crea más en el espíritu de oscuridad.
 Finalmente, que obedezca la luz,
 la siga y camine en los pasos de los vivos hacia la tierra de luz.
 
+[.discourse-part]
 Pregunta: ¿Cómo puede hacer esto el hombre?
 
+[.discourse-part]
 Respuesta: Por sí mismo no puede, pero al ser tocado,
 al ser vivificado por el poder eterno,
 al ser vuelto por la virtud secreta y al ser agitada la vida en su corazón,
@@ -1070,14 +1181,16 @@ las cuales pueden servirles en su condición actual.
 Son cuatro proposiciones relacionadas con el correcto
 conocimiento de las cosas de Dios y son las siguientes:
 
-Primera, el conocimiento de las cosas de Dios proviene del Espíritu.
+[.numbered]
+_Primera,_ el conocimiento de las cosas de Dios proviene del Espíritu.
 Así como las Escrituras mismas salieron del Espíritu,
 el verdadero conocimiento de ellas es dado solo al
 hombre que las recibe por el mismo Espíritu.
 Ningún hombre viviente puede conocer el significado de las palabras que habló el Espíritu,
 excepto si el Espíritu que las habló le da el significado de ellas.
 
-Segunda, el conocimiento de Dios (el conocimiento vivo,
+[.numbered]
+_Segunda,_ el conocimiento de Dios (el conocimiento vivo,
 el conocimiento útil) está guardado en el Espíritu y en el nacimiento que es del Espíritu.
 La parte natural del hombre no es la verdadera tesorería,
 ni le fue dada a la razón del hombre ser el amo de
@@ -1087,7 +1200,8 @@ la gracia del reino y las experiencias vivas.
 La razón del hombre está excluida para siempre de las cosas de Dios,
 salvo donde se humilla, está limitada y es sometida a ellas.
 
-Tercera,
+[.numbered]
+_Tercera,_
 el conocimiento recibido del Espíritu todavía tiene que ser probado por el Espíritu.
 Únicamente el Espíritu puede mantenerlo vivo y únicamente el Espíritu puede decir
 si la vida y la virtud están todavía en él o si la muerte lo ha atrapado.
@@ -1124,7 +1238,8 @@ De esta manera el Señor me ha estado enseñando a vivir en Él,
 no en algo que haya recibido de Él, sino en la vida misma, la misericordia,
 el beneplácito que vienen directamente del pan vivo de cada día.
 
-Cuarta, es fácil recibir conocimiento en la parte terrenal, en la sabiduría terrenal,
+[.numbered]
+_Cuarta,_ es fácil recibir conocimiento en la parte terrenal, en la sabiduría terrenal,
 separado del Espíritu y de la virtud viva.
 Cuando uno lee las Escrituras es fácil concebir y percibir
 un significado uno mismo o tomar el de otro hombre,
