--- a/escritos-volumen-1/updated/14-capitulo-13.adoc
+++ b/escritos-volumen-1/updated/14-capitulo-13.adoc
@@ -1,12 +1,14 @@
 == Capítulo XIII. La Suma y Sustancia de la Verdadera Religión
 
-Pregunta 1:
+[.discourse-part]
+_Pregunta 1:_
 ¿Qué es la verdadera religión? ¿Es un don de Dios otorgado
 a los que Él engendra por el poder de Su vida,
 o es una práctica de adoración en la naturaleza de este mundo que
 el hombre puede alcanzar mediante medios y esfuerzos naturales?
 
-Pregunta 2:
+[.discourse-part]
+_Pregunta 2:_
 ¿Cuál es la suma y sustancia de la verdadera religión?
 ¿No es el amor que procede de la Semilla de vida?
 ¿No es el viaje de la criatura de la enemistad contra Dios al amor de Dios?
@@ -17,7 +19,8 @@ soportarlos en amor, buscarlos en amor, perdonarlos en amor, orar por ellos en a
 desear el bien para ellos y luchar con Dios por misericordia hacia ellos,
 incluso cuando odian y persiguen?
 
-Pregunta 3: ¿Son encontrados en este amor los católicos,
+[.discourse-part]
+_Pregunta 3:_ ¿Son encontrados en este amor los católicos,
 protestantes o cualquier otra clase de personas religiosas?
 ¿Lo manifiestan mediante su discipulado a Cristo y por el poder de Cristo en ellos,
 o establecen sus varias formas externas y las mantienen
@@ -30,7 +33,8 @@ que no es más que una forma externa y no el verdadero poder en ella?
 ¿No muestra esto que ellos en el corazón no son discípulos de Cristo?
 Porque si fueran Sus discípulos aprenderían a amar por medio de Él.
 
-Pregunta 4: Si no se mantiene en el poder de la vida, ni sujeta a él,
+[.discourse-part]
+_Pregunta 4:_ Si no se mantiene en el poder de la vida, ni sujeta a él,
 ¿no es cierto que cualquier forma de religión termina peleando contra el poder,
 al conservar una demostración externa sin la sustancia y que por este medio la aplasta?
 ¿Cuál forma de religión en el mundo de hoy permite que el
@@ -49,7 +53,8 @@ tan pronto como empiece a inventar y a torcerse hacia una forma de su propia esc
 es inmediatamente corrompido al apoyarse en los razonamientos
 y entendimientos de los hombres.
 
-Pregunta 5:
+[.discourse-part]
+_Pregunta 5:_
 Si el poder de la verdadera religión (y verdadero
 amor) fuera levantado y restaurado de nuevo,
 ¿haría más feliz al mundo y colocaría cada cosa en el lugar apropiado,
@@ -63,7 +68,8 @@ cuán injusto es el hombre que sigue los dictados de su propia razón corrupta,
 sin conocer y sujetarse a aquello que debería iluminarla
 y darle a él el correcto uso de ella!
 
-Pregunta 6: Cuando Dios restaure la verdadera religión y la levante en poder,
+[.discourse-part]
+_Pregunta 6:_ Cuando Dios restaure la verdadera religión y la levante en poder,
 ¿no deben necesariamente marchitarse y decaer las
 formas y costumbres de adoración sin dicho poder?
 Cuando el poder apareció por primera vez en la dispensación del evangelio,
@@ -210,18 +216,23 @@ el cual es fácilmente corrompido y no puede ser conservado puro.
 
 === Un Vistazo a Algunos Misterios del Reino de Dios
 
+[.alt.centered]
 ==== CON RESPECTO A CRISTO
 
+[.discourse-part]
 Pregunta: ¿Qué es Cristo?
 
+[.discourse-part]
 Respuesta:
 Él es en Sí mismo el linaje inmediato de la vida eterna y la fuente o manantial
 de vida para la creación. "`Porque como el Padre tiene vida en sí mismo,
 así también ha dado al Hijo el tener vida en sí mismo;`" y en Su
 Hijo y a través de Su Hijo Él comunica Su vida a Sus criaturas.
 
+[.discourse-part]
 Pregunta: ¿Cómo comunica Cristo vida?
 
+[.discourse-part]
 Respuesta: Como la Palabra viva, como la Semilla prometida.
 Él siembra la Semilla del reino (en la que está la vida) en el corazón,
 y conforme le abre paso para que se extienda, crezca y leude la vasija,
@@ -230,15 +241,19 @@ De nuevo, Él es la palabra iluminadora, la palabra que da vida, la palabra de s
 la palabra de poder, la palabra de amor y reconciliación,
 cuya voz obra poderosamente para destruir el pecado y salvar el alma de dicho pecado.
 
+[.discourse-part]
 Pregunta: ¿Dónde debe ser esperada esta Palabra o Semilla?
 
+[.discourse-part]
 Respuesta: Su aparición ocurre en los corazones de los hijos de los hombres,
 ahí debe ser esperada.
 Dios siembra esta Semilla en el corazón,
 allí está cerca de aquellos a quienes Él visita con Su amorosa bondad y misericordia.
 
+[.discourse-part]
 Pregunta: ¿Cómo se recibe esta palabra?
 
+[.discourse-part]
 Respuesta: Mediante la fe en la virtud que fluye de ella.
 La naturaleza de la palabra es volverse contra el pecado y atraer hacia el Padre.
 Su luz brilla para descubrir el pecado y su vida se agita para vivificar
@@ -250,8 +265,10 @@ Pero en la medida que el corazón rechace o se vuelva
 de cualquier cosa que provenga de la palabra,
 Cristo es rechazado y dejado atrás.
 
+[.discourse-part]
 Pregunta: ¿Cómo obra esta palabra en o sobre el corazón?
 
+[.discourse-part]
 Respuesta: Según encuentre acceso y entre en el corazón, o según sea rechazada o negada.
 En la medida que tenga acceso obra vida ahí y la criatura es hecha conforme a la vida.
 Injerta Su naturaleza, Su justicia, Su santidad, Su dulzura, Su paz, Su amor, Su gozo,
@@ -262,14 +279,18 @@ e incrementa la cautividad y miseria del alma.
 ¡Así que sería mejor nunca oír ningún sonido de Cristo en el corazón,
 que oírlo y no prestarle atención ni sujetarse a él!
 
+[.discourse-part]
 Pregunta: ¿Qué entorpece la unión con Cristo?
 
+[.discourse-part]
 Respuesta: El hombre fuerte armado, a quien Cristo viene a despojar,
 hace lo posible para cegar el ojo que puede ver la hermosa
 naturaleza de Cristo y endurecer el corazón contra Sus apariciones.
 
+[.discourse-part]
 Pregunta: ¿Cómo puede ser ayudada el alma contra el hombre fuerte?
 
+[.discourse-part]
 Respuesta: Recibir la verdad en amor,
 y rendir el corazón a la virtud que fluye de Cristo en Sus visitas y apariciones,
 permite que entre al alma esa fuerza que lo conquista.
@@ -280,6 +301,7 @@ terrenales son los que le dan fuerza al enemigo;
 pero ante la fe verdadera, aún en la más pequeña medida,
 el hombre fuerte se debilita y su fuerza cae.
 
+[.alt.centered]
 ==== CON RESPECTO A LA MANERA DE CONOCER A CRISTO
 
 Cristo es el ministro del verdadero santuario que Dios ha levantado, no el hombre.
@@ -323,24 +345,31 @@ Dios ha escogido en cada hombre lo que no es, para llevar a nada todo lo que est
 de modo que la carne no se glorifique en Su presencia,
 ni ningún hombre se jacte delante del Señor de la salvación de su alma.
 
+[.alt.centered]
 ==== CON RESPECTO AL ARREPENTIMIENTO
 
+[.discourse-part]
 Pregunta: ¿Qué es arrepentimiento?
 
+[.discourse-part]
 Respuesta: Es el vuelco del corazón que obra Cristo,
 de la naturaleza muerta y de las obras muertas,
 a la Semilla viva y a las obras vivas de la misma.
 
+[.discourse-part]
 Pregunta: ¿Puede o no un hombre volverse del pecado a Dios cuando quiera?
 
+[.discourse-part]
 Respuesta: No, el hombre es un prisionero,
 su entendimiento está cautivo y su voluntad también. Todos
 los afectos del hombre y su naturaleza están en cautiverio,
 y nada puede volverlo a Dios salvo aquello que es
 más fuerte que el poder que lo mantiene cautivo.
 
+[.discourse-part]
 Pregunta: ¿Cómo se realiza el arrepentimiento?
 
+[.discourse-part]
 Respuesta: Es don de Cristo,
 a quien Dios ha designado como príncipe y Salvador
 para dar arrepentimiento y remisión de pecados.
@@ -348,13 +377,17 @@ para dar arrepentimiento y remisión de pecados.
 la naturaleza de pecado queda al descubierto y la inclinación
 del alma es secretamente vuelta contra ella.
 
+[.discourse-part]
 Pregunta: ¿De qué y hacia qué es vuelto el corazón?
 
+[.discourse-part]
 Respuesta: Es vuelto de una naturaleza a otra, de una semilla o otra,
 de un espíritu a otro, de un camino a otro, de un fin a otro.
 
+[.discourse-part]
 Pregunta: ¿Es dado el arrepentimiento en plenitud de una vez?
 
+[.discourse-part]
 Respuesta: No, pero se incrementa,
 y se le da más día a día al corazón que espera en el Señor. El pecado,
 la naturaleza de pecado, el camino de la mente y del cuerpo en él,
@@ -362,8 +395,10 @@ son expuestos cada día más,
 y la aversión y el aborrecimiento hacia este aumentan conforme la nueva naturaleza
 reúne fuerza en la mente y se incrementa en la luz y poder de la vida.
 
+[.discourse-part]
 Pregunta: ¿Qué pasa si se comete pecado después que uno se ha vuelto de él?
 
+[.discourse-part]
 Respuesta: El arrepentimiento no se ha perfeccionado todavía ahí;
 el enemigo no ha sido totalmente echado, ni su fuerza suficientemente quebrantada.
 La ley no está cumplida ahí, ni el pacto de gracia plenamente experimentado,
@@ -373,10 +408,13 @@ Dios lo carga sobre el enemigo y no sobre el alma.
 "`Y si hago lo que no quiero, ya no lo hago yo, sino el pecado que mora en mí.`" (Rom.
 7:20)
 
+[.alt.centered]
 ==== CON RESPECTO A LA FE
 
+[.discourse-part]
 Pregunta: ¿Qué es fe?
 
+[.discourse-part]
 Respuesta: Es creer en las apariciones del Señor al alma,
 aferrarse a la virtud de ellas y beber de las mismas.
 Hay diversas apariciones del Señor, como Espíritu vivificante,
@@ -387,8 +425,10 @@ y como fuente de perfecto amor, de dulzura, de todo bien, etc.
 Ahora bien, aunque al Señor le complace aparecer, es fe aquello que ve, conoce,
 se apropia, se une a sus apariciones y bebe de la virtud de las mismas.
 
+[.discourse-part]
 Pregunta: ¿Mediante qué medios es forjada la fe?
 
+[.discourse-part]
 Respuesta: Mediante la palabra viva en el corazón;
 mediante la palabra de la que el alma tiene existencia y está cerca de ella.
 Esta era la palabra de fe o la palabra que obraba fe bajo la ley.
@@ -400,8 +440,10 @@ y la que obraba fe bajo el evangelio.
 De hecho,
 esta es la Semilla de vida de la que cada cosa espiritual brota y crece en el corazón.
 
+[.discourse-part]
 Pregunta: ¿Cómo es recibida la fe?
 
+[.discourse-part]
 Respuesta: En el poder vivificante, La Semilla de vida dispara Su luz, Su vida,
 Su naturaleza, Su virtud en el corazón,
 y al tocarlo es vivificado para Dios en alguna medida.
@@ -409,8 +451,10 @@ En esta virtud y desde esta virtud vivificante fluye la fe en el alma.
 Porque en la muerte de pecado, en el estado de pecado, no hay nada sino incredulidad.
 La fe, por tanto, debe necesariamente fluir de los movimientos vivificadores de la vida.
 
+[.discourse-part]
 Pregunta: ¿Qué hace la fe en el corazón?
 
+[.discourse-part]
 Respuesta: La fe une a Dios y separa del pecado.
 Ella empieza y continua la obra de redención en el alma.
 Recibe lo que es de Dios y repele lo contrario.
@@ -420,8 +464,10 @@ de Dios en el corazón. Mantiene en el amor de Dios y expulsa el amor al pecado,
 el amor a la criatura, el amor al yo o a cualquier cosa que esté fuera de Dios.
 De hecho, la fe sorbe el aliento de vida y purga el aliento y poder de muerte.
 
+[.discourse-part]
 Pregunta: ¿Sobre qué se coloca la fe?
 
+[.discourse-part]
 Respuesta: La verdadera fe se coloca en aquello por medio de lo cual es recibida,
 es decir, en el poder vivificador.
 La fe debe ser continuamente mantenida viva por la Semilla de vida o no puede vivir.
@@ -430,19 +476,24 @@ actúa en el poder y nunca es hallada fuera de él. El hombre no puede creer cua
 es un continuo don que depende de la continua vivificación
 y nutrición de la vida de donde surgió.
 
+[.discourse-part]
 Pregunta:
 ¿Por qué el enemigo asalta con incredulidad y pelea
 tan fuertemente contra la fe del alma?
 
+[.discourse-part]
 Respuesta: Porque todo depende de ella.
 Detiene la fe y lo ha detenido todo; vence esta y lo ha vencido todo.
 Si la fe está firme y permanece fuerte, el enemigo no gana nada, todo lo contrario,
 pierde en cada tentación y aparente victoria.
 
+[.alt.centered]
 ==== CON RESPECTO AL AMOR
 
+[.discourse-part]
 Pregunta: ¿Qué es amor?
 
+[.discourse-part]
 Respuesta: ¿Qué diré de ello, o cómo expresaré en palabras su naturaleza?
 Es la dulzura de la vida; es la dulce,
 tierna y suave naturaleza de Dios fluyendo a través de Su Semilla de vida hacia la criatura;
@@ -486,10 +537,13 @@ la naturaleza de Dios! ¡Y en las vasijas que han sido hechas aptas
 para recibir el amor y manifestar la gloria de este,
 el poder del enemigo no es capaz de permanecer!
 
+[.alt.centered]
 ==== CON RESPECTO A LA OBEDIENCIA
 
+[.discourse-part]
 Pregunta: ¿Qué es obediencia?
 
+[.discourse-part]
 Respuesta: Es la sujeción del alma a la ley del Espíritu,
 cuya sujeción fluye y es fortalecida por el amor.
 Esperar conocer la mente de Dios y llevar a cabo Su voluntad en todo,
@@ -532,6 +586,7 @@ santificación, reconciliación y redención,
 porque mi corazón cree que esto puede resultar útil para algunos
 en la guía y misericordia del buen Espíritu del Señor.
 
+[.alt.centered]
 ==== CON RESPECTO A LA PAZ O AL REPOSO
 
 La verdadera paz es la quietud,
@@ -554,6 +609,7 @@ la vida es manifestada y el alma se siente entrando en la
 naturaleza de la vida y en la obediencia a ella.
 En consecuencia, la paz brota y el reposo en Dios es gustado y disfrutado.
 
+[.alt.centered]
 ==== CON RESPECTO AL GOZO
 
 El gozo es la alegría del corazón en Dios, que mana, principalmente,
@@ -577,6 +633,7 @@ falsos razonamientos, dudas y recelos,
 que por mucho tiempo me mantuvieron cautiva y evitaron que mis ojos leyeran Su amor,
 el cual fue escrito tanto en Su corazón como en Sus tratos hacia mí?`"
 
+[.alt.centered]
 ==== CON RESPECTO A LA LIBERTAD
 
 La libertad es el ensanchamiento del corazón en el Espíritu del Señor,
@@ -606,32 +663,43 @@ totalmente fuera del tiempo de la criatura, totalmente fuera del poder de la cri
 Está en el Espíritu del Padre,
 quien es la fuente de vida y le da respiraciones de vida a su hijo según Su beneplácito.
 
+[.alt.centered]
 ==== CON RESPECTO A LA REGENERACIÓN
 
+[.discourse-part]
 Pregunta: ¿Qué es regeneración?
 
+[.discourse-part]
 Respuesta: Es el nuevo nacimiento de la criatura o,
 nacer de nuevo de la Semilla inmortal de la Palabra de vida eterna.
 
+[.discourse-part]
 Pregunta: ¿Cómo se obtiene este nacimiento?
 
+[.discourse-part]
 Respuesta: Por el brote de la Semilla de vida eterna en el corazón,
 la transformación del corazón a Su imagen y ser llevado en ella.
 
+[.discourse-part]
 Pregunta: ¿Cómo es transformado el corazón a imagen de la Semilla y llevado en ella?
 
+[.discourse-part]
 Respuesta: Al ser leudado con el poder y la virtud de Su naturaleza,
 mediante la nueva savia que recibe de ella, la cual,
 se extiende poco a poco hasta que al final llega a ser todo en él.
 
+[.discourse-part]
 Pregunta: ¿Cómo se recibe esta virtud de la Semilla?
 
+[.discourse-part]
 Respuesta: Rindiéndose a ella en la fe que fluye de ella.
 Esto permite que entren la nueva savia y la naturaleza de vida que purgan lo viejo.
 
+[.discourse-part]
 Pregunta: ¿Cómo aparece la Semilla y se manifiesta a sí misma,
 y cómo se entrega uno a ella en la fe?
 
+[.discourse-part]
 Respuesta: La Semilla aparece en Su propia luz y virtud vivificante,
 lo cual descubre las tinieblas y la muerte del pecado y
 saca al corazón (que ha sido hecho dispuesto) de ello.
@@ -642,23 +710,30 @@ el alma tiene que rendirse en la obediencia de la fe sin consultar
 los razonamientos ni la sabiduría de la mente carnal,
 donde el enemigo está listo a apagar esta luz de fe y llevar a la incredulidad.
 
+[.alt.centered]
 ==== CON RESPECTO A LA JUSTIFICACIÓN
 
+[.discourse-part]
 Pregunta: ¿Qué es justificación?
 
+[.discourse-part]
 Respuesta: Es la aceptación o absolución de una persona en su obediencia al Señor. O,
 el perdón, el dejar pasar, y así absolverlo de su desobediencia.
 
+[.discourse-part]
 Pregunta: ¿Quién es el que justifica?
 
+[.discourse-part]
 Respuesta: El Señor, el que da a la humanidad la ley según Su beneplácito.
 El que también es juez de la obediencia o desobediencia del hombre a la ley,
 y el correcto justificador o condenador del hombre en ella.
 
+[.discourse-part]
 Pregunta: Pero,
 ¿no está el hombre en un estado caído? ¿Puede él obedecer
 a Dios en algo para ser justificado por Él?
 
+[.discourse-part]
 Respuesta: En efecto,
 el hombre está caído y no tiene fuerza o voluntad en sí mismo para servir u obedecer
 al Señor. Pero hay una visitación de vida y amor emitiéndose hacia la humanidad en general,
@@ -669,8 +744,10 @@ sino sólo por la terquedad y por la elección de su propia voluntad.
 Así, pues, la destrucción del hombre es, en verdad, por sí mismo y no por Dios,
 Cuyo deleite es salvar y no destruir a Su criatura.
 
+[.discourse-part]
 Pregunta: ¿Cómo se forja esta justificación?
 
+[.discourse-part]
 Respuesta: Por fe en la virtud que fluye de Cristo.
 Dios introduce la naturaleza de Su Hijo en el corazón
 y engendra allí algo de Su propia semejanza,
@@ -680,8 +757,10 @@ y dondequiera que esta fe en la virtud viva sea hallada,
 ahí borra Dios las iniquidades por amor de Su nombre.
 Sí, y la remisión del pecado es sentida en aquello que es vivificado.
 
+[.discourse-part]
 Pregunta: ¿Puede un hombre ser justificado sin haber oído nunca de Cristo externamente?
 
+[.discourse-part]
 Respuesta: Si un hombre experimenta la Semilla de vida, es vencido por Su naturaleza,
 se rinde ante Su ley según es hecha manifiesta en su corazón,
 aborrece la naturaleza y ley del pecado y muerte, y en consecuencia,
@@ -698,8 +777,10 @@ pues el objetivo de Dios en todas Sus dispensaciones
 es la experiencia interna de la vida,
 no la habilidad o el conocimiento externo.
 
+[.discourse-part]
 Pregunta: ¿Cómo es la justificación por gracia?
 
+[.discourse-part]
 Respuesta: Ningún hombre en su estado caído merece algo de Dios.
 Por Su gracia lo visita mediante cualquier derramamiento de Su amor y misericordia.
 Por Su gracia le da alguna capacidad de volverse hacia Él. De hecho,
@@ -708,36 +789,47 @@ que ninguno puede ser justificado por obras de obediencia
 que realice bajo cualquier dispensación,
 sino sólo por la remisión y capacidad que recibe de la gracia.
 
+[.discourse-part]
 Pregunta: ¿Cuál es la justicia que justifica ante los ojos de Dios?
 
+[.discourse-part]
 Respuesta: Sólo la justicia de Cristo.
 Esta justicia transmitida a la criatura en y a través de la Semilla,
 producida en la criatura por medio de la Semilla,
 y la criatura unida a Cristo en la Semilla, es la justificación de vida.
 
+[.alt.centered]
 ==== CON RESPECTO A LA SANTIFICACIÓN
 
+[.discourse-part]
 Pregunta: ¿Qué es santificación?
 
+[.discourse-part]
 Respuesta: La limpieza de la vasija por medio del Espíritu del Señor,
 de la contaminación tanto de la carne como del espíritu.
 
+[.discourse-part]
 Pregunta: ¿Por medio de qué limpia el Espíritu del Señor a la vasija de su contaminación?
 
+[.discourse-part]
 Respuesta: Mediante la Verdad viva que tiene poder en ella para lavar el engaño,
 la enemistad, la impureza y cualquier maldad que haya ensuciado anteriormente la vasija,
 o que pueda contaminarla de nuevo en cualquier momento.
 
+[.discourse-part]
 Pregunta: ¿Cómo recibe el alma esta limpieza o purificación del Espíritu del Señor?
 
+[.discourse-part]
 Respuesta:
 Al obedecer Su verdad hecha manifiesta en el corazón. Porque mediante
 esa obediencia el poder de la palabra entra en el alma y derrama
 abundantemente Su virtud viva en ella.
 
+[.discourse-part]
 Pregunta: Entonces,
 ¿en qué debe ocuparse principalmente el alma que desea ser purificada de su inmundicia?
 
+[.discourse-part]
 Respuesta: En la obediencia de la fe, o en la obediencia que brota de la fe.
 Porque así como todos los beneficios y bendiciones
 de la ley dependían de la obediencia a la ley,
@@ -745,43 +837,57 @@ así dependen los beneficios y bendiciones del evangelio de la obediencia al eva
 Sí, y esta es la gloria y excelencia del evangelio:
 Que el principio de la fe hace ahora lo que el principio de la ley nunca pudo.
 
+[.alt.centered]
 ==== CON RESPECTO A LA RECONCILIACIÓN
 
+[.discourse-part]
 Pregunta: ¿Qué es reconciliación?
 
+[.discourse-part]
 Respuesta: Es unir las mentes y corazones de Dios y del hombre en Uno.
 
+[.discourse-part]
 Pregunta: ¿Cómo se logra?
 
+[.discourse-part]
 Respuesta: Eliminando la enemistad de la naturaleza del hombre,
 la cual es contraria a Dios, y plantándolo en la naturaleza y vida que Dios ama,
 y haciéndolo crecer en ella.
 De esta manera, lo que Dios odia y es causa de separación, es removido del hombre,
 y el hombre es introducido y criado en lo que es el amor y deleite del corazón de Dios.
 
+[.discourse-part]
 Pregunta: ¿Por medio de qué se logra esta reconciliación?
 
+[.discourse-part]
 Respuesta: Por medio de la Palabra de poder de Dios.
 Esta Palabra brota del amor de Dios hacia el hombre,
 que al ser rescatado de sí mismo e introducido en Ella,
 la semilla del mal es destruida y la buena Semilla del reino amada.
 
+[.alt.centered]
 ==== CON RESPECTO A LA REDENCIÓN
 
+[.discourse-part]
 Pregunta: Qué es redención?
 
+[.discourse-part]
 Respuesta:
 Es la compra de la vasija para sacarla del cautiverio y de la miseria de la muerte,
 e introducirla en la libertad y bendición de la vida divina, la cual es sembrada,
 revelada, incrementada y perfeccionada en el corazón.
 
+[.discourse-part]
 Pregunta: ¿Quién es el redentor?
 
+[.discourse-part]
 Respuesta: El Hijo de Dios, el Hijo engendrado de Dios, la imagen divina,
 el que cree y cumple naturalmente la voluntad del Padre en cada vasija que Él ha preparado.
 
+[.discourse-part]
 Pregunta: ¿Por medio de qué redime Él?
 
+[.discourse-part]
 Respuesta: Por medio de Su sangre, Su vida, Su poder,
 Su naturaleza sembrada en la vasija y transformándola a Su imagen.
 Sí, esto, en efecto, es redención:
