--- a/escritos-volumen-1/updated/15-capitulo-14.adoc
+++ b/escritos-volumen-1/updated/15-capitulo-14.adoc
@@ -1,12 +1,12 @@
 == Capítulo XIV. Las Dos Semillas
 
-Esta es la sustancias de nuestra religión: Primero,
+Esta es la sustancias de nuestra religión: _Primero,_
 experimentar y discernir las dos semillas, es decir,
 la semilla de enemistad y la semilla de amor,
 la semilla de la carne y la semilla del Espíritu,
 la semilla de Agar y la semilla de Sara,
 la semilla del vientre egipcio y la semilla santa de Israel.
-Segundo,
+_Segundo,_
 experimentar los juicios de Dios administrados a una de
 estas semillas hasta que sea llevada a cautiverio y muerte;
 y experimentar a la otra Semilla levantándose en el amor
@@ -112,9 +112,11 @@ en concordancia con el corazón mismo del Padre.
 Esto puede ser adicionalmente ilustrado, y tal vez ser más notorio para algunos,
 mediante una o dos escrituras.
 
+[quote.scripture, , Gal. 5:17]
+____
 "`Porque el deseo de la carne es contra el Espíritu,
-y el del Espíritu es contra la carne; y éstos se oponen entre sí...`" (Gal.
-5:17)
+y el del Espíritu es contra la carne; y éstos se oponen entre sí...`"
+____
 
 Aquí tenemos dos semillas (la semilla de la serpiente y la semilla de la mujer)
 cuyos esfuerzos y peleas se dan en el hombre una vez que Dios despierta el alma.
@@ -129,8 +131,7 @@ la codicia de esta negada y los juicios del Señor administrados sobre ella,
 y experimentar a la otra semilla levantarse para vivir,
 prosperar y prevalecer en el alma;
 de esta manera el alma experimenta salvación y redención bajo su sombra:
-"`Sion será rescatada con juicio, y los convertidos de ella con justicia`" (Isa.
-1:27).
+"`Sion será rescatada con juicio, y los convertidos de ella con justicia`" (Isa. 1:27).
 
 ¿Qué es Sión? ¿No es el santo monte de Dios donde
 Su Hijo se establece como Rey para reinar,
@@ -165,10 +166,10 @@ para los que están viajando verdaderamente hacia ello,
 y más aún, para los que lo disfrutan.
 
 Estas tres cosas son la suma de todo:
-1) Conocer y experimentar lo que tiene que ser derribado y mantenido en muerte.
-2) Conocer lo que tiene que ser levantado de la tumba
++++1)+++ Conocer y experimentar lo que tiene que ser derribado y mantenido en muerte.
++++2)+++ Conocer lo que tiene que ser levantado de la tumba
 y vive para Dios y reina en Su dominio.
-3) Conocer lo que debe ser mantenido en sujeción
++++3)+++ Conocer lo que debe ser mantenido en sujeción
 y obediencia a Aquel que tiene que reinar.
 Ahora, bien, ¡experimentar esto cumplido en el corazón (la carne derribada,
 la Semilla de vida levantada y el alma sujeta al poder puro celestial) es, en efecto,
@@ -208,8 +209,11 @@ Ellos no pudieron creer que tales enemigos podían ser vencidos.
 
 === Con Respecto a Venir al Padre por Medio de Cristo
 
+[quote.scripture, , Juan 14:6]
+____
 "`Yo soy el camino, la verdad, y la vida;
-nadie viene al Padre si no es por mí.`" (Juan 14:6)
+nadie viene al Padre si no es por mí.`"
+____
 
 El hombre en el estado corrupto y degenerado,
 ha caído de Dios y ha perdido Su imagen (la imagen
@@ -435,8 +439,10 @@ y el que nada puede vencer.
 
 === Unas Pocas Palabras con Respecto a la Semilla de Verdad
 
+[.discourse-part]
 Pregunta: ¿Qué es la Semilla de verdad?
 
+[.discourse-part]
 Respuesta: Es la luz, es la que reprende y manifiesta el pecado.
 "`...porque la luz es lo que manifiesta todo.`"
 Por esto Pablo dice: "`Despiértate, tú que duermes,
@@ -445,8 +451,10 @@ fuera por la luz que pone de manifiesto el pecado,
 no habría manera de despertarse del sueño y levantarse de la muerte.
 ¡Qué preciosa es esa luz!
 
+[.discourse-part]
 Pregunta: ¿Cómo se puede discernir la Semilla de verdad?
 
+[.discourse-part]
 Respuesta: Mediante la penetración de su naturaleza vivificante,
 la cual se revela a sí misma en sus apariciones y operaciones.
 Pues ella aparece y obra vívidamente, poderosamente y efectivamente en el corazón,
@@ -482,8 +490,10 @@ abiertos y mantenerlos así por medio de esta vida,
 para que puedan recibir,
 retener y no perder la capacidad de entender las cosas del reino de Dios.
 
+[.discourse-part]
 Pregunta: ¿Cómo se puede comprar y poseer esta semilla o perla?
 
+[.discourse-part]
 Respuesta: Muriendo a la propia sabiduría y voluntad del hombre; no hay otra forma.
 La luz es totalmente contraria al hombre mientras este permanezca separado de Dios.
 Ella opera contra el espíritu del hombre, sus pensamientos, sus deseos, su razón,
@@ -661,8 +671,10 @@ guiado, enseñado y preservado en el poder y por medio de la presencia de la vid
 
 === Con Respecto a la Unidad Espiritual
 
+[.discourse-part]
 Pregunta: ¿Qué es unidad espiritual?
 
+[.discourse-part]
 Respuesta: La reunión de dos o más en la misma naturaleza espiritual,
 reuniéndose en un único y mismo centro espiritual o manantial de vida.
 Cuando los espíritus o las almas de las criaturas
@@ -670,8 +682,10 @@ son engendradas por un único poder en una única vida,
 y se reúnen ahí en el corazón,
 en tanto se reúnan de esta manera hay verdadera unidad entre ellas.
 
+[.discourse-part]
 Pregunta: ¿En qué consiste esta unidad?
 
+[.discourse-part]
 Respuesta: Consiste en la vida, en la naturaleza,
 en el Espíritu en el que todas ellas son engendradas,
 del Cual son formadas y dónde su reunión existe.
@@ -683,8 +697,10 @@ sino únicamente, hacer, pensar o hablar en la misma vida.
 Sí, y aunque las obras, pensamientos o palabras sean diversas,
 si proceden de la misma semilla y naturaleza, allí es experimentada una verdadera unidad.
 
+[.discourse-part]
 Pregunta: ¿Cómo se preserva la unidad?
 
+[.discourse-part]
 Respuesta: Sólo permaneciendo en la única vida,
 sólo manteniéndose en el poder y en la Semilla de donde brota y se encuentra la unidad.
 Aquí, en el mismo centro espiritual,
@@ -698,8 +714,10 @@ sino permanecer y actuar en aquello que unió al principio.
 En esto no hay causa ni espacio para la división,
 y el que permanezca dentro de estos límites sólo puede hallarse en la unidad.
 
+[.discourse-part]
 Pregunta: ¿Cómo se interrumpe la unidad?
 
+[.discourse-part]
 Respuesta: Al interponerse algo de una naturaleza o espíritu diferente a la vida.
 Cuando algo de la parte terrenal o sensual se sitúa entre el alma y la vida,
 interrumpe tanto la unidad del alma con la vida misma,
@@ -715,8 +733,10 @@ fuera de los movimientos y poder de la vida, frena la vida e interrumpe la unida
 Pues la vida en otros no puede unirse en espíritu con esto,
 aunque reconozca las palabras como ciertas.
 
+[.discourse-part]
 Pregunta: ¿Cómo se puede recuperar la unidad si en algún momento se pierde?
 
+[.discourse-part]
 Respuesta: Sólo en el Señor está la recuperación de Israel,
 de cualquier medida de pérdida, de cualquier tipo y en cualquier momento.
 Sólo Él puede enseñar a retirarse y a ser hallado en donde la unidad está y permanece,
