--- a/escritos-volumen-1/updated/16-capitulo-15.adoc
+++ b/escritos-volumen-1/updated/16-capitulo-15.adoc
@@ -35,6 +35,7 @@ el que descansa la seguridad y la satisfacción que Dios le ha dado a mi alma.
 No es mi deseo afligir o molestar a nadie,
 sólo ser útil al exponer lo que el Señor ha demostrado y escrito en mi corazón.
 
+[.discourse-part]
 Pregunta: Puede que alguien se pregunte, cómo llegué yo a conocer al Espíritu de Dios,
 Su iglesia y las Escrituras de los santos hombres,
 que fueron escritas por la inspiración y guía del Santo Espíritu de Dios.
@@ -44,6 +45,7 @@ de los movimientos, sugerencias y tentaciones del espíritu maligno.
 Y cómo es que me siento satisfecho de estar en el camino eterno
 de la verdad y la vida sin salirme o desviarme de él.
 
+[.discourse-part]
 Respuesta: Esta es la manera que conozco: Recibir, unirme,
 permanecer y crecer en la Semilla santa que el Padre de los espíritus
 sembró en mí. Hay una Semilla elegida a la que es imposible engañar,
@@ -70,8 +72,10 @@ Y cuando en algún momento en mis viajes, mediante cualquier tentación o engañ
 el enemigo se ha logrado meter entre mi alma y esta Semilla en algún grado,
 en igual medida ha venido sobre mi alma oscuridad, pérdida, dudas, temores, luchas, etc.
 
+[.discourse-part]
 Pregunta: Pero, ¿cómo conozco yo esta Semilla?
 
+[.discourse-part]
 Respuesta: Mediante Su naturaleza, Sus propiedades,
 las manifestaciones de Sí misma en mi corazón. Ella tiene esa luz,
 esa vida y ese poder en sí misma que nunca encontré en ningún otro lugar.
@@ -112,6 +116,7 @@ hasta que haya llevado todas las cosas bajo el dominio del poder del Padre.
 
 === La Manera de Conocer los Movimientos, Doctrinas y Enseñanzas del Espíritu de Cristo
 
+[.discourse-part]
 Pregunta: ¿Cómo puede un hombre discernir los movimientos,
 doctrinas y enseñanzas del Espíritu de Cristo internamente, de los movimientos,
 apariciones y operaciones engañosos del espíritu contrario?
@@ -119,6 +124,7 @@ Y con respecto a las doctrinas que otros enseñan,
 ¿cómo puede saber un hombre si están hablando a partir de
 Cristo o si están hablando a partir de sí mismos?
 
+[.discourse-part]
 Respuesta: Esto es de gran importancia, sin ninguna duda.
 El que es capaz de hacer una distinción tendrá que haber recibido primero algo de Dios.
 Tendrá que haber nacido de la sabiduría que viene de lo alto.
@@ -216,12 +222,14 @@ la doctrina del que viene del Padre?
 es del Espíritu de Dios o de la raíz de engaño en mí!`" Entonces,
 esta es la manera: Haga la voluntad del Padre.
 
+[.discourse-part]
 Objeción: ¿Hacer la voluntad del Padre?
 Pero, ¿qué clase de respuesta es esta?
 ¡Toda la discusión es acerca de la voluntad del Padre! ¿Cómo puedo
 hacer la voluntad del Padre (la que se supone que el Hijo debe
 enseñarme) antes de primero conocer la doctrina del Hijo?
 
+[.discourse-part]
 Respuesta: Es cierto, la doctrina del Hijo es la voluntad del Padre,
 y usted no puede hacer la voluntad del Padre excepto cuando reciba la doctrina del Hijo.
 Pero tome nota: En su mente hay discusiones acerca de algo de la doctrina del Hijo,
